fix: migrate httpclient5 deprecated APIs, bump to 5.5.2 (#342)
Four deprecations removed from ApacheHttpClient and ApacheTrustSelfSigned:

1. SSLConnectionSocketFactory → TlsSocketStrategy / DefaultClientTlsStrategy
   The httpclient5 5.3 socket-factory abstraction was replaced by TlsSocketStrategy.
   ApacheTrustSelfSigned.trust() now returns TlsSocketStrategy; the connection
   manager builder now uses setTlsSocketStrategy() instead of setSSLSocketFactory().

2. RequestConfig.setConnectTimeout → ConnectionConfig.setConnectTimeout
   Connect timeout was moved out of RequestConfig (request-scoped) into
   ConnectionConfig (connection-scoped). ResponseTimeout remains in RequestConfig.

3. URL(String) constructor → URI.create(serverUrl).toURL()
   Java 20 deprecated the URL(String) constructor. IllegalArgumentException from
   URI.create() is wrapped as MalformedURLException to preserve the constructor's
   declared throws clause and existing tests.

4. execute(ClassicHttpRequest) → execute(ClassicHttpRequest, HttpClientContext)
   Passing an explicit HttpClientContext is the non-deprecated form.

Bump httpclient5 from 5.4.3 to 5.5.2 (latest stable).

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>